--- a/assets/components/modai/css/mgr.css
+++ b/assets/components/modai/css/mgr.css
@@ -3,7 +3,7 @@
     font-size: 24px;  /* Adjust font size as needed */
     cursor: pointer;
     margin-left: 5px;
-    vertical-align: middle;
+    vertical-align: baseline;
     transition: transform 0.2s ease;
 }
 
