--- a/assets/components/modai/css/mgr.css
+++ b/assets/components/modai/css/mgr.css
@@ -1,6 +1,7 @@
 /* Styling for the magic wand emoji icon */
-#autosummary-wand {
-    font-size: 24px;  /* Adjust font size as needed */
+.modai-generate {
+    all: unset;
+    display: inline-block;
     cursor: pointer;
     margin-left: 5px;
     vertical-align: baseline;
@@ -8,6 +9,6 @@
 }
 
 /* Hover effect for the wand icon */
-#autosummary-wand:hover {
+.modai-generate:hover {
     transform: rotate(20deg);
 }
