--- a/assets/components/modai/css/mgr.css
+++ b/assets/components/modai/css/mgr.css
@@ -15,6 +15,7 @@
     padding-top: 3px;
     vertical-align: baseline;
     box-shadow: 0 0 0 1px #e4e4e4;
+    height: 1.85em;
     &:disabled {
         opacity:0.5;
         cursor:initial;
