--- a/assets/components/modai/css/mgr.css
+++ b/assets/components/modai/css/mgr.css
@@ -14,7 +14,9 @@
     padding-inline: 0.6em;
     padding-top: 3px;
     vertical-align: baseline;
-    box-shadow: 0 0 0 1px #e4e4e4;
+    border: 1px solid #ddd;
+    border-right: 2px solid #444;
+    border-bottom: 2px solid #444;
     height: 1.85em;
     &:disabled {
         opacity:0.5;
