--- a/assets/components/modai/css/modai.css
+++ b/assets/components/modai/css/modai.css
@@ -238,6 +238,11 @@
                                 background-color: var(--border-light);
                             }
 
+                            &:focus {
+                                outline: 2px solid var(--primary) !important;
+                                outline-offset: 2px;
+                            }
+
 
                             .spinner {
                                 display: inline-block;
@@ -633,7 +638,47 @@
     }
 
     &.generate {
+        .generate,
+        .history_next,
+        .history_prev {
+            --button-h: 191;
+            --button-s: 100%;
+            --button-l: 44%;
+            --button-hover-darken: 15%;
+            --button-border-darken: 20%;
+            --button-color: hsl(var(--button-h), var(--button-s), var(--button-l));
+            --button-color-border: hsl( var(--button-h), var(--button-s), calc(var(--button-l) - var(--button-border-darken)) );
+            --button-color-hover: hsl( var(--button-h), var(--button-s), calc(var(--button-l) - var(--button-hover-darken)) );
+            display: inline-block;
+            cursor: pointer;
+            background: var(--button-color);
+            color: #ffffff;
+            border-radius: 4px;
+            margin-right: 6px;
+            padding-inline: 0.6em;
+            padding: 4px 6px 2px;
+            vertical-align: baseline;
+            border: 2px solid var(--button-color-border);
+            border-top-width: 1px;
+            border-left-width: 1px;
+            height: 1.85em;
+            transition: 200ms all;
 
+            &:hover {
+                transform: scale(1.15);
+                background: var(--button-color-hover);
+            }
+
+            &:disabled {
+                opacity:0.5;
+                cursor:initial;
+            }
+        }
+
+        .generate {
+            margin-left: 6px;
+            padding-bottom: 3px;
+        }
     }
 }
 
