--- a/assets/components/modai/css/modai.css
+++ b/assets/components/modai/css/modai.css
@@ -37,6 +37,11 @@
 .icon {
     display: flex;
     align-items: center;
+
+    svg {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .chat-modal {
@@ -637,9 +642,18 @@
 }
 
 .generate {
-    .generate,
-    .history_next,
-    .history_prev {
+    display: inline-flex;
+    height: 24px;
+    vertical-align: middle;
+    padding-left: 5px;
+
+    .history--wrapper {
+        align-items: center;
+    }
+
+    .btn,
+    .history--next,
+    .history--prev {
         --button-h: 191;
         --button-s: 100%;
         --button-l: 44%;
@@ -654,13 +668,11 @@
         color: #ffffff;
         border-radius: 4px;
         margin-right: 6px;
-        padding-inline: 0.6em;
-        padding: 4px 6px 2px;
-        vertical-align: baseline;
+        padding: 3px 6px 4px;
         border: 2px solid var(--button-color-border);
         border-top-width: 1px;
         border-left-width: 1px;
-        height: 1.85em;
+        height: 100%;
         transition: 200ms all;
 
         &:hover {
@@ -672,10 +684,5 @@
             opacity:0.5;
             cursor:initial;
         }
-    }
-
-    .generate {
-        margin-left: 6px;
-        padding-bottom: 3px;
     }
 }
